[project]
name = "pytorch-real-esrgan-sisr-df2k-ost"
version = "0.1.0"
description = "PyTorch Realistic Enhanced Super Resolution Generative Adversarial Network trained on the DF2K_OST dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "safetensors>=0.6.2",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
]
